# elara.cpp

./: -o  .gitignore  .pbignore  ELARA_AGENT_API.md  E_STATUS.md  LICENSE  LICENSING.md  Makefile.in  TRAINING_AND_CONTRIBUTIONS.md  build.sh  configure.ac  install-deps-apt.sh  install.sh  killall.sh  run_valgrind_unit_tests.sh  script-buttons.json
libElaraData/: Makefile.in  config.h.in  configure.ac
libElaraData/Tests/: TestModel.cpp  TestModel.h  main.cpp
libElaraData/libelaradata/connectors/: Connector.cpp  Connector.h  MysqlConnector.cpp  MysqlConnector.h  SqliteConnector.cpp  SqliteConnector.h
libElaraData/libelaradata/models/: Model.cpp  Model.h  Schemas.cpp  Schemas.h
libElaraData/libelaradata/result/: ResultSet.cpp  ResultSet.h  Row.cpp  Row.h
libElaraPythonThreads/: Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac
libElaraPythonThreads/demo/: example.py  worker_template.py
libElaraPythonThreads/libelarapythonthreads/: PythonProcessTask.cpp  PythonProcessTask.h  PythonThreadRuntime.cpp  PythonThreadRuntime.h
libElaraPythonThreads/python/: module.cpp
libElaraPythonThreads/python/elara_threads/: __init__.py
libElaraSerializer/: Makefile.in  configure.ac
libElaraSerializer/elaraserializer/: LinkedList.h  Serializable.cpp  Serializable.h  SerializableString.cpp  SerializableString.h
libElaraUI/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  elara_ui_layout.json  gen_vulkan_spirv.py
libElaraUI/artifacts/: latest.txt
libElaraUI/artifacts/20260505-114411-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-114541-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-115043-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-115257-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-115319-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-115418-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-115515-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-115920-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-120111-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-120154-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-120312-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-120424-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-120714-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-120900-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-121055-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-121421-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-121645-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-121823-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-121947-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122108-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122128-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122153-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122402-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122424-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122542-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122742-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122813-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122847-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-122858-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-170326-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-170601-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-171454-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-172015-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-172257-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-172611-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-173238-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-173411-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-174223-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-174359-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-175012-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/artifacts/20260505-221109-ui-rpc-debug/: manifest.txt  summary.txt
libElaraUI/demo/: main.cpp  rpc_server.cpp
libElaraUI/docs/: ELARA_UI_JSON_PROTOCOL_DRAFT.md
libElaraUI/libelaraui/: ElaraGui.h  ElaraJsonUiProtocol.cpp  ElaraJsonUiProtocol.h
libElaraUI/libelaraui/frontend/: ElaraEventResponder.cpp  ElaraEventResponder.h  ElaraGridLayout.cpp  ElaraGridLayout.h  ElaraLabelWidget.cpp  ElaraOutboundEventFilter..cpp  ElaraOutboundEventFilter.cpp  ElaraOutboundEventFilter.h  ElaraOutboundEventQueue.cpp  ElaraOutboundEventQueue.h  ElaraPalette.cpp  ElaraPalette.h  ElaraPopupWidget.cpp  ElaraPopupWidget.h  ElaraRootWidget.cpp  ElaraRootWidget.h  ElaraTabWidget.cpp  ElaraTabWidget.h  ElaraTheme.cpp  ElaraTheme.h  ElaraWidget.cpp  (+7 more)
libElaraUiRpc/: Makefile  Makefile.in  README.md  config.status  configure  configure.ac
libElaraUiRpc/demo/: client.cpp
libElaraUiRpc/libelarauirpc/: ElaraUiDocumentBuilder.cpp  ElaraUiDocumentBuilder.h  ElaraUiRpcPeer.cpp  ElaraUiRpcPeer.h  ElaraUiRpcUiBridge.cpp  ElaraUiRpcUiBridge.h  ElaraUiRpcUiService.cpp  ElaraUiRpcUiService.h  config.h
libElaraVector/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
libElaraVector/libelaravector/: elara_vector.c  elara_vector.h
libElaraVector/libelaravectorcpp/: ElaraVectorDocument.cpp  ElaraVectorDocument.h
(+1041 files in other folders)
